Fixed a visual bug

--- a/Source/index.html
+++ b/Source/index.html
@@ -42,6 +42,7 @@
         window.onresize = function () {
             if (editor) {
                 editor.layout();
+                editor.layout();
             }
         };
     </script>
